# ephemeral-pulumi-deploy

./: .copier-answers.yml  .coveragerc  LICENSE  README.md  mutex_queue  pyproject.toml
.devcontainer/: create-aws-profile.sh  devcontainer.json  docker-compose.yml  on-create-command.sh  post-start-command.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish.yaml  publish_to_staging.yaml
src/ephemeral_pulumi_deploy/: __init__.py  cli.py  utils.py
tests/unit/: test_resource_naming.py
